--- a/CourseFeedback/WebContent/WEB-INF/web.xml
+++ b/CourseFeedback/WebContent/WEB-INF/web.xml
@@ -24,4 +24,10 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
+	
+	<session-config>
+        <session-timeout>
+            30
+        </session-timeout>
+    </session-config>
 </web-app>
